--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+87% of storage used … If you run out, you can't create, edit and upload files. Get 100 GB of storage for RM 8.49 RM 2.15/month for 2 months.
 /* style.css */
 
 body {
